// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`kol-card should render with _label="Überschrift" _level=0 _hasCloser=false 1`] = `
<kol-card class="kol-card">
  <template shadowrootmode="open">
    <div class="card">
      <div class="header">
        <strong class="kol-heading kol-heading--strong">
          Überschrift
        </strong>
      </div>
      <div class="content">
        <slot></slot>
      </div>
    </div>
  </template>
</kol-card>
`;

exports[`kol-card should render with _label="Überschrift" _level=0 _hasCloser=true 1`] = `
<kol-card class="kol-card">
  <template shadowrootmode="open">
    <div class="card">
      <div class="header">
        <strong class="kol-heading kol-heading--strong">
          Überschrift
        </strong>
      </div>
      <div class="content">
        <slot></slot>
      </div>
      <kol-button-wc _hidelabel="" _label="kol-close" _tooltipalign="left" class="close"></kol-button-wc>
    </div>
  </template>
</kol-card>
`;

exports[`kol-card should render with _label="Überschrift" _level=0 1`] = `
<kol-card class="kol-card">
  <template shadowrootmode="open">
    <div class="card">
      <div class="header">
        <strong class="kol-heading kol-heading--strong">
          Überschrift
        </strong>
      </div>
      <div class="content">
        <slot></slot>
      </div>
    </div>
  </template>
</kol-card>
`;

exports[`kol-card should render with _label="Überschrift" _level=1 _hasCloser=false 1`] = `
<kol-card class="kol-card">
  <template shadowrootmode="open">
    <div class="card">
      <div class="header">
        <h1 class="kol-heading kol-heading--h1">
          Überschrift
        </h1>
      </div>
      <div class="content">
        <slot></slot>
      </div>
    </div>
  </template>
</kol-card>
`;

exports[`kol-card should render with _label="Überschrift" _level=1 _hasCloser=true 1`] = `
<kol-card class="kol-card">
  <template shadowrootmode="open">
    <div class="card">
      <div class="header">
        <h1 class="kol-heading kol-heading--h1">
          Überschrift
        </h1>
      </div>
      <div class="content">
        <slot></slot>
      </div>
      <kol-button-wc _hidelabel="" _label="kol-close" _tooltipalign="left" class="close"></kol-button-wc>
    </div>
  </template>
</kol-card>
`;

exports[`kol-card should render with _label="Überschrift" _level=1 1`] = `
<kol-card class="kol-card">
  <template shadowrootmode="open">
    <div class="card">
      <div class="header">
        <h1 class="kol-heading kol-heading--h1">
          Überschrift
        </h1>
      </div>
      <div class="content">
        <slot></slot>
      </div>
    </div>
  </template>
</kol-card>
`;

exports[`kol-card should render with _label="Überschrift" _level=2 _hasCloser=false 1`] = `
<kol-card class="kol-card">
  <template shadowrootmode="open">
    <div class="card">
      <div class="header">
        <h2 class="kol-heading kol-heading--h2">
          Überschrift
        </h2>
      </div>
      <div class="content">
        <slot></slot>
      </div>
    </div>
  </template>
</kol-card>
`;

exports[`kol-card should render with _label="Überschrift" _level=2 _hasCloser=true 1`] = `
<kol-card class="kol-card">
  <template shadowrootmode="open">
    <div class="card">
      <div class="header">
        <h2 class="kol-heading kol-heading--h2">
          Überschrift
        </h2>
      </div>
      <div class="content">
        <slot></slot>
      </div>
      <kol-button-wc _hidelabel="" _label="kol-close" _tooltipalign="left" class="close"></kol-button-wc>
    </div>
  </template>
</kol-card>
`;

exports[`kol-card should render with _label="Überschrift" _level=2 1`] = `
<kol-card class="kol-card">
  <template shadowrootmode="open">
    <div class="card">
      <div class="header">
        <h2 class="kol-heading kol-heading--h2">
          Überschrift
        </h2>
      </div>
      <div class="content">
        <slot></slot>
      </div>
    </div>
  </template>
</kol-card>
`;

exports[`kol-card should render with _label="Überschrift" _level=3 _hasCloser=false 1`] = `
<kol-card class="kol-card">
  <template shadowrootmode="open">
    <div class="card">
      <div class="header">
        <h3 class="kol-heading kol-heading--h3">
          Überschrift
        </h3>
      </div>
      <div class="content">
        <slot></slot>
      </div>
    </div>
  </template>
</kol-card>
`;

exports[`kol-card should render with _label="Überschrift" _level=3 _hasCloser=true 1`] = `
<kol-card class="kol-card">
  <template shadowrootmode="open">
    <div class="card">
      <div class="header">
        <h3 class="kol-heading kol-heading--h3">
          Überschrift
        </h3>
      </div>
      <div class="content">
        <slot></slot>
      </div>
      <kol-button-wc _hidelabel="" _label="kol-close" _tooltipalign="left" class="close"></kol-button-wc>
    </div>
  </template>
</kol-card>
`;

exports[`kol-card should render with _label="Überschrift" _level=3 1`] = `
<kol-card class="kol-card">
  <template shadowrootmode="open">
    <div class="card">
      <div class="header">
        <h3 class="kol-heading kol-heading--h3">
          Überschrift
        </h3>
      </div>
      <div class="content">
        <slot></slot>
      </div>
    </div>
  </template>
</kol-card>
`;

exports[`kol-card should render with _label="Überschrift" _level=4 _hasCloser=false 1`] = `
<kol-card class="kol-card">
  <template shadowrootmode="open">
    <div class="card">
      <div class="header">
        <h4 class="kol-heading kol-heading--h4">
          Überschrift
        </h4>
      </div>
      <div class="content">
        <slot></slot>
      </div>
    </div>
  </template>
</kol-card>
`;

exports[`kol-card should render with _label="Überschrift" _level=4 _hasCloser=true 1`] = `
<kol-card class="kol-card">
  <template shadowrootmode="open">
    <div class="card">
      <div class="header">
        <h4 class="kol-heading kol-heading--h4">
          Überschrift
        </h4>
      </div>
      <div class="content">
        <slot></slot>
      </div>
      <kol-button-wc _hidelabel="" _label="kol-close" _tooltipalign="left" class="close"></kol-button-wc>
    </div>
  </template>
</kol-card>
`;

exports[`kol-card should render with _label="Überschrift" _level=4 1`] = `
<kol-card class="kol-card">
  <template shadowrootmode="open">
    <div class="card">
      <div class="header">
        <h4 class="kol-heading kol-heading--h4">
          Überschrift
        </h4>
      </div>
      <div class="content">
        <slot></slot>
      </div>
    </div>
  </template>
</kol-card>
`;

exports[`kol-card should render with _label="Überschrift" _level=5 _hasCloser=false 1`] = `
<kol-card class="kol-card">
  <template shadowrootmode="open">
    <div class="card">
      <div class="header">
        <h5 class="kol-heading kol-heading--h5">
          Überschrift
        </h5>
      </div>
      <div class="content">
        <slot></slot>
      </div>
    </div>
  </template>
</kol-card>
`;

exports[`kol-card should render with _label="Überschrift" _level=5 _hasCloser=true 1`] = `
<kol-card class="kol-card">
  <template shadowrootmode="open">
    <div class="card">
      <div class="header">
        <h5 class="kol-heading kol-heading--h5">
          Überschrift
        </h5>
      </div>
      <div class="content">
        <slot></slot>
      </div>
      <kol-button-wc _hidelabel="" _label="kol-close" _tooltipalign="left" class="close"></kol-button-wc>
    </div>
  </template>
</kol-card>
`;

exports[`kol-card should render with _label="Überschrift" _level=5 1`] = `
<kol-card class="kol-card">
  <template shadowrootmode="open">
    <div class="card">
      <div class="header">
        <h5 class="kol-heading kol-heading--h5">
          Überschrift
        </h5>
      </div>
      <div class="content">
        <slot></slot>
      </div>
    </div>
  </template>
</kol-card>
`;

exports[`kol-card should render with _label="Überschrift" _level=6 _hasCloser=false 1`] = `
<kol-card class="kol-card">
  <template shadowrootmode="open">
    <div class="card">
      <div class="header">
        <h6 class="kol-heading kol-heading--h6">
          Überschrift
        </h6>
      </div>
      <div class="content">
        <slot></slot>
      </div>
    </div>
  </template>
</kol-card>
`;

exports[`kol-card should render with _label="Überschrift" _level=6 _hasCloser=true 1`] = `
<kol-card class="kol-card">
  <template shadowrootmode="open">
    <div class="card">
      <div class="header">
        <h6 class="kol-heading kol-heading--h6">
          Überschrift
        </h6>
      </div>
      <div class="content">
        <slot></slot>
      </div>
      <kol-button-wc _hidelabel="" _label="kol-close" _tooltipalign="left" class="close"></kol-button-wc>
    </div>
  </template>
</kol-card>
`;

exports[`kol-card should render with _label="Überschrift" _level=6 1`] = `
<kol-card class="kol-card">
  <template shadowrootmode="open">
    <div class="card">
      <div class="header">
        <h6 class="kol-heading kol-heading--h6">
          Überschrift
        </h6>
      </div>
      <div class="content">
        <slot></slot>
      </div>
    </div>
  </template>
</kol-card>
`;

exports[`kol-card should render with _label="Überschrift" 1`] = `
<kol-card class="kol-card">
  <template shadowrootmode="open">
    <div class="card">
      <div class="header">
        <h1 class="kol-heading kol-heading--h1">
          Überschrift
        </h1>
      </div>
      <div class="content">
        <slot></slot>
      </div>
    </div>
  </template>
</kol-card>
`;
